2005-10-20  Alexander Larsson  <alexl@redhat.com>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/test-long-cancel.c:
	Add a cancellation test for http.
	This shows a problem in the patch in bug #123472

2005-10-20  Sven Herzberg  <herzi@gnome-de.org>

	reviewed by: Christian Kellner

	* doc/gnome-vfs-2.0-sections.txt,
	* libgnomevfs/gnome-vfs-ops.c,
	* libgnomevfs/gnome-vfs-ops.h: add gnome_vfs_exists as the text uri
	pendant to gnome_vfs_uri_exists

2005-10-20  Christian Kellner  <gicmo@gnome.org>

	* programs/gnomevfs-info.c: (main): Add command line options to force
	slow mime type detection and the following of symlinks.

2005-10-19  Matthias Clasen  <mclasen@redhat.com>

	* libgnomevfs/xdg*.[hc]: Sync to upstream to fix
	handling of the mime cache.

2005-10-17  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-utils.c:
	(_gnome_vfs_uri_resolve_all_symlinks_uri):
	Correctly resolve nested symlinks without accessing invalid memory.
	Fixes #318457.

2005-10-17  Alexander Larsson  <alexl@redhat.com>

	* test/Makefile.am:
	* test/test-parse-ls-lga.c:
	Add ls parser test from #163671

2005-10-11  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c:
	(gnome_vfs_read_cancellable): Make sure bytes_read is set to 0 when
	the read returns an error (fixes possible problems using gnomevfs-cat
	with methods that don't set *bytes_read to 0 when an error
	occurs)

2005-10-12  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* programs/gnomevfs-ls.c: (show_data), (list), (main):
	Add the ability to list more than one directory, really
	test dir_close()

2005-10-05  Edward Hervey  <edward@fluendo.com>

	* configure.in: (HAVE_SAMBA_OLD_CLOSE):
	* modules/smb-method.c:
	Added correct handling of the renaming of the close function pointer in samba's
	libsmbclient.h (close --> close_fn)

2005-10-03  Alexander Larsson  <alexl@redhat.com>
