@@ -1,3 +1,11 @@
+2005-10-20  Christian Neumair  <chris@gnome-de.org>
+
+	* libgnomevfs/gnome-vfs-parse-ls.c:
+	(is_last_column), (vfs_parse_filedate):
+	(gnome_vfs_parse_ls_lga):
+	Improve parsing of directories which have names that match dates,
+	years or times of day. Fixes #163671.
+
 2005-10-20  Alexander Larsson  <alexl@redhat.com>
 
 	* test/.cvsignore:
